Finished category funtion (remain small bugs)

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -80,6 +83,10 @@
     <ProjectReference Include="..\BLL\BLL.csproj">
       <Project>{c041fabd-da01-4e20-899f-97c75ecd8afe}</Project>
       <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{8081e978-f034-4446-b829-3597c3970c35}</Project>
+      <Name>DAL</Name>
     </ProjectReference>
     <ProjectReference Include="..\DTO\DTO.csproj">
       <Project>{2510b2a3-9a30-4b13-9a07-3413862fec3f}</Project>
