Finished Get, Updates, Add, Delete function for every DataAccess class in DAL (haven't had validating functionality yet)

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CategoryDataLogic.cs" />
     <Compile Include="CategoryDisplayLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validate.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
