--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,7 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountDataAccess.cs" />
+    <Compile Include="BillDataAccess.cs" />
+    <Compile Include="BillInfoDataAccess.cs" />
     <Compile Include="CategoryDataAccess.cs" />
+    <Compile Include="FoodDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
