Add all DataLogic classes. Fixed bug related to Linq to SQL
Bug related to Linq to SQL: HasLoadedOrAssignedValue caused "Operation is not valid due to the current state of the object"

Constructed classes, refacted codes

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -58,6 +58,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>RestaurantManagement.dbml</DependentUpon>
     </Compile>
+    <Compile Include="TableDataAccess.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
