--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,10 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CategoryDataLogic.cs" />
-    <Compile Include="CategoryDisplayLogic.cs" />
+    <Compile Include="DataLogic\BillDataLogic.cs" />
+    <Compile Include="DataLogic\BillInfo.cs" />
+    <Compile Include="DataLogic\CategoryDataLogic.cs" />
+    <Compile Include="DisplayLogic\CategoryDisplayLogic.cs" />
+    <Compile Include="DataLogic\FoodDataLogic.cs" />
+    <Compile Include="DisplayLogic\FoodDisplayLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validate.cs" />
+    <Compile Include="DataLogic\TableDataLogic.cs" />
+    <Compile Include="Helper\Validate.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
