--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,11 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataLogic\BillDataLogic.cs" />
-    <Compile Include="DataLogic\BillInfo.cs" />
+    <Compile Include="DataLogic\BillInfoDataLogic.cs" />
     <Compile Include="DataLogic\CategoryDataLogic.cs" />
+    <Compile Include="DisplayLogic\BillDisplayLogic.cs" />
+    <Compile Include="DisplayLogic\BillInfoDisplayLogic.cs" />
     <Compile Include="DisplayLogic\CategoryDisplayLogic.cs" />
     <Compile Include="DataLogic\FoodDataLogic.cs" />
     <Compile Include="DisplayLogic\FoodDisplayLogic.cs" />
+    <Compile Include="DisplayLogic\TableDisplayLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataLogic\TableDataLogic.cs" />
     <Compile Include="Helper\Validate.cs" />
