--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,11 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountDataAccess.cs" />
-    <Compile Include="BillDataAccess.cs" />
-    <Compile Include="BillInfoDataAccess.cs" />
-    <Compile Include="CategoryDataAccess.cs" />
-    <Compile Include="FoodDataAccess.cs" />
+    <Compile Include="DataAccess\BillDataAccess.cs" />
+    <Compile Include="DataAccess\BillInfoDataAccess.cs" />
+    <Compile Include="DataAccess\CategoryDataAccess.cs" />
+    <Compile Include="DataAccess\DataAccess.cs" />
+    <Compile Include="DataAccess\FoodDataAccess.cs" />
+    <Compile Include="DataAccess\TableDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -58,7 +59,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>RestaurantManagement.dbml</DependentUpon>
     </Compile>
-    <Compile Include="TableDataAccess.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
@@ -84,5 +84,6 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
