--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,6 +54,7 @@
     <Compile Include="DisplayLogic\CategoryDisplayLogic.cs" />
     <Compile Include="DisplayLogic\DisplayLogic.cs" />
     <Compile Include="DisplayLogic\FoodDisplayLogic.cs" />
+    <Compile Include="DisplayLogic\MainFromDisplayLogic.cs" />
     <Compile Include="DisplayLogic\TableDisplayLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helper\Validate.cs" />
