--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DisplayLogic\FoodDisplayLogic.cs" />
     <Compile Include="DisplayLogic\MainFromDisplayLogic.cs" />
     <Compile Include="DisplayLogic\TableDisplayLogic.cs" />
+    <Compile Include="Helper\Initialize.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helper\Validate.cs" />
   </ItemGroup>
