--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\AccountDataAccess.cs" />
     <Compile Include="DataAccess\BillDataAccess.cs" />
     <Compile Include="DataAccess\BillInfoDataAccess.cs" />
     <Compile Include="DataAccess\CategoryDataAccess.cs" />
