Add protecting data from sudden closing
*Could not serialize winform controls but improvised it by created temp classes and then serialized those classes instead
*Still need fix bugs and refactor codes

--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TempBtnTable.cs" />
+    <Compile Include="TempFood.cs" />
+    <Compile Include="TempFoods.cs" />
+    <Compile Include="TempTable.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
